# transporte-executivo

./: .dockerignore  .env.example  .env.motor.example  .env.sistema.example  .gitignore  DEPLOY_EASYPANEL.md  Dockerfile  Dockerfile.sistema  INICIAR_VPS.bat  INTEGRATION_GATEWAY.md  README.md  docker-compose.sistema.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  address_po_field.py  admin_auth.py  api_gateway.py  automations.py  bind_host.py  branding.py  cache.py  catalog.py  catalog_admin.py  code_guard.py  company_model.py  company_portal_gateway.py  company_portal_services.py  components.py  config.py  contracts_model.py  contracts_ui.py  coverage_map.py  data.py  database.py  dependencies.py  driver_portal_dtos.py  driver_portal_notifications.py  events_ui.py  executive_ui.py  geography.py  inbound_ui.py  integrations.py  main.py  main_window.py  operational_network.py  pages.py  partner_network_dashboard.py  partner_network_dtos.py  partner_network_gateway.py  partner_network_reservations.py  platform.py  platform_contract.py  portal_landing.py  (+14 more)
data/: app_state.json  automations.json  code_manifest.json  coverage_map.html  geocode_cache.json  ibge_cache.json  settings.json  supabase_credentials.json
scripts/: deploy.sh  docker_entrypoint.py  e2e_gateway_motor.py  migrate_json_to_supabase.py  p24_go_live_fix.py  p24_homologation.py  p25_company_homologation.py  p25_password_reset.py  p31_production_validate.py  run_dev.ps1  run_master_server.py  seed_data.py  test_p21_driver_identity.py  uvicorn_wrapper.sh
tests/: conftest.py  (+6 more)
(+254 files in other folders)
