[project]
name = "motor-reservas-nexus"
version = "1.0.0"
description = "Motor de Reservas Nexus Transfer - engine.transporteexecutivo.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.9",
    "qrcode[pil]>=8.0",
    "reportlab>=4.2.0",
    "aiosmtplib>=3.0.2",
    "email-validator>=2.2.0",
    "bleach>=6.2.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
